--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
+DB_HOST=mysql.railway.internal
 DB_USER=root
-DB_PASS=waad
-DB_NAME=healthy_meal_planner
+DB_PASS=cOrafRiWiRzqYYEbPYZzAMMqqvYQOeao
+DB_NAME=railway
+DB_PORT=3306
 PORT=5000
