--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-DB_HOST=mysql.railway.internal
-DB_USER=root
-DB_PASS=NedArufBecslNghESdxUQStNdvdqhTeZ
-DB_NAME=railway
-DB_PORT=3306
+DATABASE_URL = mysql://root:NedArufBecslNghESdxUQStNdvdqhTeZ@ballast.proxy.rlwy.net:33772/railway
 PORT=5000
